--- a/assets/targets/components/inpage-navigation/_jumpnav.scss
+++ b/assets/targets/components/inpage-navigation/_jumpnav.scss
@@ -77,7 +77,7 @@
   @extend %jump;
 
   @include breakpoint(wide) {
-    display: block;
+    display: table;
     margin-top: 33px;
     padding: 15px 15px 30px;
     position: absolute;
@@ -97,7 +97,6 @@
 
     &.endpoint {
       bottom: 545px;
-      display: none; // temp fix
       position: absolute;
       top: auto;
     }
